<resources>
    <string name="app_name">TestApplication</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="splash_title">Movies library</string>
    <string name="poster_of_the_film">Poster of the film</string>
    <string name="email">Email</string>
    <string name="remember_password">remember password</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_your_password">Forgot your password</string>
    <string name="create_account">Create account</string>
    <string name="password">password</string>
    <string name="registration">Registration</string>
    <string name="repeat_password">repeat password</string>
    <string name="search_film">search film</string>
    <string name="description">Description</string>
    <string name="password_registration">Password</string>
    <string name="error_message">Error! Please try again later</string>
    <string name="try_again_button">Try Again</string>
    <string name="search">Search</string>
    <string name="search_hint">Search film</string>
    <string name="title_sign_in_fragment">Welcome to Movies library</string>
    <string name="image_of_the_film">Image of the film</string>
    <string name="send_message">Send message</string>
    <string name="required">Required</string>
    <string name="countSymbolsPassword">count symbols</string>
    <string name="movie_logo">movie logo</string>
    <string name="login">Login</string>
</resources>